# leetcode

./: CMakeLists.txt  README  run.sh
easy/: 28_FindTheIndexOfTheFirstOccurrenceInAString.cpp
