cmake_minimum_required(VERSION 3.30)
project(LeetCode)

include(FetchContent)
FetchContent_Declare(
  googletest
  # Specify the commit you depend on and update it regularly.
  URL https://github.com/google/googletest/archive/b514bdc898e2951020cbdca1304b75f5950d1f59.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Now simply link against gtest or gtest_main as needed. Eg
add_executable(LeetCode
        easy/28_FindTheIndexOfTheFirstOccurrenceInAString.cpp)
target_link_libraries(LeetCode gtest_main)